@@ -1,5 +1,9 @@
 2004-02-18  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
+	* oct-fftw.cc (octave_fftw_planner::create_plan):
+	Cast IN and OUT	args to ptrdiff_t instead of long before masking.
+	From Paul Kienzle <pkienzle@users.sf.net>.
+
 	* Array.cc (Array<T>::insertN (const Array<T>&, int, int)):
 	Rename from Array<T>::insert.
 	(Array<T>::insert2 (const Array<T>&, int, int)):
